--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 11:20:06 AM JST 2026
+Thu Jan  8 11:25:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.957 ms
+Hosted by GSL Networks (Tokyo) [0.91 km]: 34.626 ms
 Testing download speed................................................................................
-Download: 166.31 Mbit/s
+Download: 147.35 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.94 Mbit/s
+Upload: 29.13 Mbit/s
