--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 11:45:03 AM JST 2026
+Thu Jan  8 11:50:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 38.361 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 42.706 ms
 Testing download speed................................................................................
-Download: 148.22 Mbit/s
+Download: 52.79 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.66 Mbit/s
+Upload: 18.26 Mbit/s
