--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 11:55:06 AM JST 2026
+Thu Jan  8 12:05:10 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 42.2 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 46.603 ms
 Testing download speed................................................................................
-Download: 132.53 Mbit/s
+Download: 41.16 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.06 Mbit/s
+Upload: 6.28 Mbit/s
