--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 12:10:03 PM JST 2026
+Thu Jan  8 12:15:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.14 ms
+Hosted by GSL Networks (Tokyo) [0.91 km]: 45.041 ms
 Testing download speed................................................................................
-Download: 134.82 Mbit/s
+Download: 164.96 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.58 Mbit/s
+Upload: 29.75 Mbit/s
