--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan  8 12:05:10 PM JST 2026
+Thu Jan  8 12:10:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 46.603 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.14 ms
 Testing download speed................................................................................
-Download: 41.16 Mbit/s
+Download: 134.82 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 6.28 Mbit/s
+Upload: 28.58 Mbit/s
