--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan  8 12:20:06 PM JST 2026
+Thu Jan  8 12:25:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 46.799 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 39.562 ms
 Testing download speed................................................................................
-Download: 92.01 Mbit/s
+Download: 129.88 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 26.26 Mbit/s
+Upload: 29.09 Mbit/s
