--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 12:55:05 PM JST 2026
+Thu Jan  8 01:05:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 38.963 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 45.634 ms
 Testing download speed................................................................................
-Download: 134.22 Mbit/s
+Download: 191.57 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.36 Mbit/s
+Upload: 33.19 Mbit/s
