--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 01:05:05 PM JST 2026
+Thu Jan  8 01:10:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 45.634 ms
+Hosted by GSL Networks (Tokyo) [0.91 km]: 38.441 ms
 Testing download speed................................................................................
-Download: 191.57 Mbit/s
+Download: 157.37 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.19 Mbit/s
+Upload: 33.18 Mbit/s
