--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 01:15:06 PM JST 2026
+Thu Jan  8 01:20:06 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SpaceCore.pro | Premium VPS Hosting (Tokyo) [0.91 km]: 42.749 ms
+Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 44.505 ms
 Testing download speed................................................................................
-Download: 3.30 Mbit/s
+Download: 83.84 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 2.82 Mbit/s
+Upload: 27.44 Mbit/s
