--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 01:20:06 PM JST 2026
+Thu Jan  8 01:25:06 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 44.505 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 38.57 ms
 Testing download speed................................................................................
-Download: 83.84 Mbit/s
+Download: 174.62 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 27.44 Mbit/s
+Upload: 33.14 Mbit/s
