--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 01:40:06 PM JST 2026
+Thu Jan  8 01:45:06 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 42.381 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 38.579 ms
 Testing download speed................................................................................
-Download: 90.48 Mbit/s
+Download: 81.24 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.20 Mbit/s
+Upload: 19.47 Mbit/s
