--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 01:50:06 PM JST 2026
+Thu Jan  8 01:55:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 36.874 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 35.506 ms
 Testing download speed................................................................................
-Download: 114.81 Mbit/s
+Download: 79.26 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.08 Mbit/s
+Upload: 33.08 Mbit/s
