--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 02:15:05 PM JST 2026
+Thu Jan  8 02:20:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 39.611 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 42.761 ms
 Testing download speed................................................................................
-Download: 78.61 Mbit/s
+Download: 66.83 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 32.08 Mbit/s
+Upload: 27.47 Mbit/s
