--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 02:50:05 PM JST 2026
+Thu Jan  8 02:55:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 37.365 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.455 ms
 Testing download speed................................................................................
-Download: 68.86 Mbit/s
+Download: 78.59 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 26.58 Mbit/s
+Upload: 25.08 Mbit/s
