--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 03:20:04 PM JST 2026
+Thu Jan  8 03:25:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 37.809 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.956 ms
 Testing download speed................................................................................
-Download: 96.63 Mbit/s
+Download: 69.31 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 20.03 Mbit/s
+Upload: 23.09 Mbit/s
