--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 03:40:03 PM JST 2026
+Thu Jan  8 03:45:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 37.004 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 37.727 ms
 Testing download speed................................................................................
-Download: 54.28 Mbit/s
+Download: 92.30 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 17.42 Mbit/s
+Upload: 27.75 Mbit/s
