--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 04:25:03 PM JST 2026
+Thu Jan  8 04:35:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 33.685 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 40.492 ms
 Testing download speed................................................................................
-Download: 126.60 Mbit/s
+Download: 91.37 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.18 Mbit/s
+Upload: 20.35 Mbit/s
