--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 04:35:03 PM JST 2026
+Thu Jan  8 04:40:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 40.492 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 37.998 ms
 Testing download speed................................................................................
-Download: 91.37 Mbit/s
+Download: 105.67 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 20.35 Mbit/s
+Upload: 33.42 Mbit/s
